# os_lab2

./: CMakeLists.txt
include/: array_processor.h
src/: array_processor.cpp  main.cpp
tests/: CMakeLists.txt  test_array_processor.cpp
